k8s/guardians/kube-system/__namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  labels:
    vault-injection: enabled
