k8s/guardians/kube-system/kilo-k3s.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kilo
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kilo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kilo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kilo
    spec:
      serviceAccountName: kilo
      hostNetwork: true
      containers:
        - name: kilo
          image: squat/kilo
          args:
            - --kubeconfig=/etc/kubernetes/kubeconfig
            - --hostname=$(NODE_NAME)
            - --mesh-granularity=full
          securityContext:
            privileged: true
          volumeMounts:
            - name: cni-conf-dir
              mountPath: /etc/cni/net.d
            - name: kilo-dir
              mountPath: /var/lib/kilo
            - name: kubeconfig
              mountPath: /etc/kubernetes/kubeconfig
              readOnly: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
        - effect: NoExecute
          operator: Exists
      volumes:
        - name: cni-bin-dir
          hostPath:
            path: /opt/cni/bin
        - name: cni-conf-dir
          hostPath:
            path: /etc/cni/net.d
        - name: kilo-dir
          hostPath:
            path: /var/lib/kilo
        - name: kubeconfig
          hostPath:
            path: /var/lib/rancher/k3s/agent/kubeconfig.yaml
