k8s/guardians/kube-system/consul.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels: &labels
    app.kubernetes.io/instance: consul
    app.kubernetes.io/name: consul
  name: consul
  namespace: kube-system
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8500
    - name: rpc
      port: 8400
    - name: serflan-tcp
      port: 8301
      protocol: TCP
    - name: serflan-udp
      port: 8301
      protocol: UDP
    - name: serfwan-tcp
      port: 8302
      protocol: TCP
    - name: serfwan-udp
      port: 8302
      protocol: UDP
    - name: server
      port: 8300
    - name: consuldns-tcp
      port: 8600
    - name: consuldns-udp
      port: 8600
      protocol: UDP
  selector:
    <<: *labels
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels: &labels
    app.kubernetes.io/instance: consul
    app.kubernetes.io/name: consul
  name: consul
  namespace: kube-system
  annotations:
    fluxcd.io/tag.consul: semver:~1
    fluxcd.io/automated: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      <<: *labels
  serviceName: consul
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    <<: *labels
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - name: consul
          image: consul:1.6.1
          command:
            - consul
          args:
            - agent
            - -config-dir=/etc/consul/config
            - -encrypt=$(GOSSIP_KEY)
            - -server
            - -advertise=$(POD_IP)
            - -bootstrap-expect=$(INITIAL_CLUSTER_SIZE)
          livenessProbe:
            exec:
              command:
                - consul
                - members
                - -http-addr=http://127.0.0.1:8500
            initialDelaySeconds: 300
            timeoutSeconds: 5
          ports:
            - containerPort: 8500
              name: http
            - containerPort: 8400
              name: rpc
            - containerPort: 8301
              name: serflan-tcp
              protocol: TCP
            - containerPort: 8301
              name: serflan-udp
              protocol: UDP
            - containerPort: 8302
              name: serfwan-tcp
              protocol: TCP
            - containerPort: 8302
              name: serfwan-udp
              protocol: UDP
            - containerPort: 8300
              name: server
            - containerPort: 8600
              name: consuldns-tcp
            - containerPort: 8600
              name: consuldns-udp
              protocol: UDP
          resources:
            limits: &resources
              cpu: 50m
              memory: 128Mi
            requests:
              <<: *resources
          volumeMounts:
            - mountPath: /var/lib/consul
              name: datadir
            - mountPath: /etc/consul/config
              name: config
              readOnly: true
            - mountPath: /etc/consul/secrets
              name: secrets
              readOnly: true
      securityContext:
        fsGroup: 1000
      volumes:
        - name: ca
          hostPath:
            path: /etc/ssl/certs/hannahs.family.ca.cert.pem
            type: File
        - name: config
          configMap:
            name: consul
        - name: secrets
          secret:
            secretName: consul
  volumeClaimTemplates:
    - metadata:
        name: datadir
        labels:
          <<: *labels
      spec:
        storageClassName: fast
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
