k8s/guardians/kube-system/kube-scheduler.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-scheduler
  namespace: kube-system
  labels:
    k8s-app: kube-scheduler
spec:
  clusterIP: None
  ports:
    - name: https-metrics
      port: 10250

---
apiVersion: v1
kind: Endpoints
metadata:
  name: kube-scheduler
  namespace: kube-system
  labels:
    k8s-app: kube-scheduler
subsets:
  - addresses:
      - ip: 104.225.223.46
    ports:
      - name: https-metrics
        port: 10250
