k8s/guardians/kube-system/kubernetes-vault.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-vault
  namespace: kube-system
  labels: &labels
    app.kubernetes.io/name: kubernetes-vault
    app.kubernetes.io/instance: kubernetes-vault
spec:
  clusterIP: None
  selector:
    <<: *labels
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-vault
  namespace: kube-system
  labels: &labels
    app.kubernetes.io/name: kubernetes-vault
    app.kubernetes.io/instance: kubernetes-vault
spec:
  replicas: 3
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      serviceAccountName: kubernetes-vault
      containers:
        - name: kubernetes-vault
          image: boostport/kubernetes-vault
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /kubernetes-vault
            - name: ca
              mountPath: /vault/tls/ca.pem
      volumes:
        - name: config-volume
          secret:
            secretName: kubernetes-vault
        - name: ca
          hostPath:
            path: /etc/ssl/certs/hannahs.family.ca.cert.pem
            type: File
